Fixed player canvas overlapping the text in the start menu

--- a/modules/css/base.css
+++ b/modules/css/base.css
@@ -1916,10 +1916,10 @@ body.has-images #storyCaptionContent {
 
 #characterTooltip {
 	position: absolute;
-	width: 65px;
+	width: 90px;
 	height: 180px;
 	top: 5px;
-	left: 85px;
+	left: 100px;
 	z-index: -1;
 }
 
@@ -2024,12 +2024,13 @@ body.has-images #storyCaptionContent {
 }
 
 #startingPlayerImage {
-	margin-top: 130px;
+	position: relative;
+	height: 150px;
 }
 
-#startingPlayerImage #img {
-	top: 5.44em;
-	left: 20px;
+#startImg {
+	position: absolute;
+	top: -45px;
 }
 
 .icon_entity_ui {
